Addresses the failed configC test (TestRESTAPI.testModifyDatastreamByReference) as reported in FCREPO-614. Addresses authentication required on every resource as reported in FCREPO-615. The solution takes an approach similar to FilterRestApiAuthn rather than stepping up to the other issues surrounding REST API authN as noted in the tracker, which apply to both FeSL and the legacy authN. Refactored FedoraWebXML and fleshed its corresponding unit test. Eliminated the excludeURIs init-param from AuthFilterJAAS as this was an even worse hack for dealing w/ configuring authN.

--- a/fcrepo-webapp/fcrepo-webapp-fedora/src/main/webapp/WEB-INF/web.xml
+++ b/fcrepo-webapp/fcrepo-webapp-fedora/src/main/webapp/WEB-INF/web.xml
@@ -279,9 +279,10 @@
       <param-value>org.fcrepo.server.jaas.auth.UserPrincipal</param-value>
     </init-param>
     <init-param>
-      <description>OPTIONAL. A comma separated list of url-patterns to ignore</description>
-      <param-name>excludeUris</param-name>
-      <param-value>/getDS</param-value>
+      <description>True iff API-A requests via the REST API require authentication. 
+      If not specified, defaults to true.</description>
+      <param-name>authnAPIA</param-name>
+      <param-value>false</param-value>
     </init-param>
   </filter>
 
