--- a/fcrepo-client/fcrepo-client-admin/pom.xml
+++ b/fcrepo-client/fcrepo-client-admin/pom.xml
@@ -128,6 +128,10 @@
       <version>1.6-1</version>
     </dependency>
     <dependency>
+      <groupId>ch.qos.logback</groupId>                                                           
+      <artifactId>logback-classic</artifactId>
+    </dependency>
+    <dependency>
       <groupId>commons-codec</groupId>
 	  <artifactId>commons-codec</artifactId>
 	  <version>1.3</version>
@@ -135,21 +139,10 @@
     <dependency>
       <groupId>commons-discovery</groupId>
       <artifactId>commons-discovery</artifactId>
-      <version>0.2</version>
     </dependency>
     <dependency>
       <groupId>commons-httpclient</groupId>
       <artifactId>commons-httpclient</artifactId>
-      <version>3.1</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-logging</groupId>
-	  <artifactId>commons-logging</artifactId>
-	  <version>1.0.4</version>
-	</dependency>
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
     </dependency>
     <dependency>
       <groupId>com.sun.woodstock.dependlibs</groupId>
@@ -222,12 +215,14 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>1.5.2</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
-      <version>1.5.2</version>
+      <artifactId>log4j-over-slf4j</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
     </dependency>
     <dependency>
       <groupId>wsdl4j</groupId>
