--- a/fcrepo-client/fcrepo-client-messaging/pom.xml
+++ b/fcrepo-client/fcrepo-client-messaging/pom.xml
@@ -125,7 +125,11 @@
 
   <dependencies>
 
-    <!-- Note: There is a runtime dependency on selected classes. DWD 10/20/2009 -->
+    <dependency>
+      <groupId>ch.qos.logback</groupId>                                                           
+      <artifactId>logback-classic</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.fcrepo</groupId>
       <artifactId>fcrepo-common</artifactId>
@@ -145,8 +149,18 @@
     </dependency>
 
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>log4j-over-slf4j</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
     </dependency>
 
     <dependency>
@@ -155,38 +169,32 @@
       <version>1.0.1</version>
     </dependency>
 
-    <!-- Note: Used by messaging and admin client. DWD 9/9/2009 -->
     <dependency>
       <groupId>javax.activation</groupId>
       <artifactId>activation</artifactId>
       <version>1.1.1</version>
     </dependency> 
 
-    <!-- Note: Used by messaging client. DWD 9/9/2009 -->
     <dependency>
       <groupId>org.apache.abdera</groupId>
       <artifactId>abdera-core</artifactId>
     </dependency>
 
-    <!-- Note: Used by messaging client. DWD 9/9/2009 -->
     <dependency>
       <groupId>org.apache.abdera</groupId>
       <artifactId>abdera-i18n</artifactId>
     </dependency>
 
-    <!-- Note: Used by messaging client. DWD 9/9/2009 -->
     <dependency>
       <groupId>org.apache.abdera</groupId>
       <artifactId>abdera-parser</artifactId>
     </dependency>
     
-    <!-- Note: Used by messaging client. DWD 9/9/2009 -->
     <dependency>
       <groupId>org.apache.ws.commons.axiom</groupId>
       <artifactId>axiom-api</artifactId>
     </dependency>
 
-    <!-- Note: Used by messaging client. DWD 9/9/2009 -->
     <dependency>
       <groupId>org.apache.ws.commons.axiom</groupId>
       <artifactId>axiom-impl</artifactId>
