--- a/fcrepo-common/pom.xml
+++ b/fcrepo-common/pom.xml
@@ -296,7 +296,6 @@
     <dependency>
       <groupId>commons-httpclient</groupId>
       <artifactId>commons-httpclient</artifactId>
-      <version>3.1</version>
     </dependency>
 
     <dependency>
@@ -308,7 +307,6 @@
     <dependency>
       <groupId>org.fcrepo</groupId>
       <artifactId>axis</artifactId>
-      <version>1.3-PATCHED</version>
     </dependency>
 
     <dependency>
@@ -329,8 +327,18 @@
     </dependency>
 
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>log4j-over-slf4j</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
     </dependency>
 
   </dependencies>
