--- a/fcrepo-security/fcrepo-security-jaas/pom.xml
+++ b/fcrepo-security/fcrepo-security-jaas/pom.xml
@@ -22,8 +22,12 @@
       <artifactId>jsp-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>log4j-over-slf4j</artifactId>
     </dependency>
     <dependency>
       <groupId>org.fcrepo</groupId>
