--- a/fcrepo-security/fcrepo-security-pdp/pom.xml
+++ b/fcrepo-security/fcrepo-security-pdp/pom.xml
@@ -28,8 +28,12 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>log4j-over-slf4j</artifactId>
     </dependency>
     <dependency>
       <groupId>org.fcrepo</groupId>
