--- a/fcrepo-webapp/fcrepo-webapp-imagemanip/pom.xml
+++ b/fcrepo-webapp/fcrepo-webapp-imagemanip/pom.xml
@@ -27,6 +27,11 @@
 
   <dependencies>
 
+    <dependency>                                                                                    
+      <groupId>ch.qos.logback</groupId>                                                           
+      <artifactId>logback-classic</artifactId>
+    </dependency>
+
 	<dependency>
 	  <groupId>commons-codec</groupId>
 	  <artifactId>commons-codec</artifactId>
@@ -36,12 +41,6 @@
     <dependency>
       <groupId>commons-httpclient</groupId>
       <artifactId>commons-httpclient</artifactId>
-      <version>3.1</version>
-    </dependency>
-  
-    <dependency>
-        <groupId>commons-logging</groupId>
-        <artifactId>commons-logging</artifactId>
     </dependency>
   
     <dependency>
@@ -67,6 +66,16 @@
       <groupId>org.fcrepo</groupId>
       <artifactId>jai_core</artifactId>
       <version>1.1.2_01</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
     </dependency>
   
   </dependencies>
