--- a/fcrepo-webapp/fcrepo-webapp-saxon/pom.xml
+++ b/fcrepo-webapp/fcrepo-webapp-saxon/pom.xml
@@ -27,6 +27,11 @@
 
   <dependencies>
 
+    <dependency>                                                                                    
+      <groupId>ch.qos.logback</groupId>                                                           
+      <artifactId>logback-classic</artifactId>
+    </dependency>
+
 	<dependency>
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
@@ -36,14 +41,8 @@
 	<dependency>
       <groupId>commons-httpclient</groupId>
 	  <artifactId>commons-httpclient</artifactId>
-	  <version>3.1</version>
 	</dependency>
 	
-	<dependency>
-      <groupId>commons-logging</groupId>
-      <artifactId>commons-logging</artifactId>
-    </dependency>
-    
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
@@ -55,6 +54,16 @@
       <groupId>org.fcrepo</groupId>
       <artifactId>saxon</artifactId>
       <version>9.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
     </dependency>
   
   </dependencies>
