Update for FCREPO-630 (move to slf4j+logback): Using maven enforcer plugin to ban the use of commons-logging and log4j. Also added a couple necessary exclusions that were missed before.

--- a/fcrepo-integrationtest/pom.xml
+++ b/fcrepo-integrationtest/pom.xml
@@ -594,6 +594,12 @@
       <artifactId>httpclient</artifactId>
       <version>4.0</version>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
