--- a/fcrepo-webapp/fcrepo-webapp-fop/pom.xml
+++ b/fcrepo-webapp/fcrepo-webapp-fop/pom.xml
@@ -53,6 +53,12 @@
       <groupId>org.apache.xmlgraphics</groupId>
       <artifactId>fop</artifactId>
       <version>0.95-1</version>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
