--- a/pom.xml
+++ b/pom.xml
@@ -571,7 +571,7 @@
           </execution>
         </executions>
         <configuration>
-          <revisionOnScmFailure>${version}</revisionOnScmFailure>
+          <revisionOnScmFailure>${project.version}</revisionOnScmFailure>
           <timestampFormat>{0,date,yyyy-MM-dd HH:mm:ss 'UTC'Z}</timestampFormat>
         </configuration>
       </plugin>
