--- a/fcrepo-webapp/pom.xml
+++ b/fcrepo-webapp/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.fcrepo</groupId>
     <artifactId>fcrepo</artifactId>
-    <version>3.3</version>
+    <version>3.3.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>fcrepo-webapp</artifactId>
