Fixes FCREPO-566 (Trunk fails to build on Windows if path contains spaces)

--- a/fcrepo-common/pom.xml
+++ b/fcrepo-common/pom.xml
@@ -47,6 +47,8 @@
           <serverSide>true</serverSide>
           <skeletonDeploy>true</skeletonDeploy>
           <wrapArrays>false</wrapArrays>
+          <useEmitter>true</useEmitter>
+          <typeMappingVersion>1.2</typeMappingVersion>
         </configuration>
 
         <executions>
