--- a/resources/server/org/fcrepo/utilities/install/OptionDefinition.properties
+++ b/resources/server/org/fcrepo/utilities/install/OptionDefinition.properties
@@ -261,14 +261,13 @@ using ActiveMQ broker URIs, see                                            \n\
 	http://activemq.apache.org/broker-uri.html
 messaging.uri.defaultValue = vm:(broker:(tcp://localhost:61616))
 
-fesl.authn.enabled.label = Enable FeSL AuthN (Experimental Feature)
+fesl.authn.enabled.label = Enable FeSL AuthN
 fesl.authn.enabled.description = \
-Enable FeSL Authentication? This is an experimental replacement for Fedora's \n\
-legacy authentication servlet filters, and is still under development.       \n\
-Production repositories should NOT enable this, but we invite you to try it  \n\
-out and give us feedback.                                                    \n\
+Enable FeSL Authentication? To continue to use Fedora's legacy             \n\
+authentication, enter "false" below. Please note that Fedora's legacy      \n\
+authentication is expected to be phased out in a subsequent release.       \n\
 For more information, see: http://fedora-commons.org/confluence/x/h4Ov
-fesl.authn.enabled.defaultValue = false
+fesl.authn.enabled.defaultValue = true
 
 fesl.authz.enabled.label = Enable FeSL AuthZ (Experimental Feature)
 fesl.authz.enabled.description = \
