--- a/fcrepo-server/pom.xml
+++ b/fcrepo-server/pom.xml
@@ -422,7 +422,6 @@
     <dependency>
       <groupId>com.sun.jersey</groupId>
       <artifactId>jersey-bundle</artifactId>
-      <version>1.0.1</version>
     </dependency>
 
     <dependency>
@@ -617,6 +616,11 @@
     <dependency>
       <groupId>org.apache.ws.commons.axiom</groupId>
       <artifactId>axiom-impl</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-mapper-asl</artifactId>
     </dependency>
 
     <dependency>
