FCREPO-705:  new system property fedora.authorize.access set in POM - configA false, configB true; new method in TestRESTAPI getAuthAccess() reads this property; Access method tests now use this either (a) to determine if an "unauthorized" test should be run and (b) to set the authorization parameter when testing for success.

--- a/fcrepo-integrationtest/pom.xml
+++ b/fcrepo-integrationtest/pom.xml
@@ -92,6 +92,10 @@
 
                   <systemProperties>
                     <property>
+                        <name>fedora.authorize.access</name>
+                        <value>false</value>
+                    </property>
+                    <property>
                       <name>logback.configurationFile</name>
                       <value>src/test/resources/logback.xml</value>
                     </property>
@@ -212,6 +216,11 @@
 
                   <systemProperties>
                     <property>
+                        <name>fedora.authorize.access</name>
+                        <value>false</value>
+                    </property>
+                  
+                    <property>
                       <name>logback.configurationFile</name>
                       <value>src/test/resources/logback.xml</value>
                     </property>
@@ -331,6 +340,11 @@
                   <skip>${integration.test.skip}</skip>
 
                   <systemProperties>
+                    <property>
+                        <name>fedora.authorize.access</name>
+                        <value>true</value>
+                    </property>
+                  
                     <property>
                       <name>logback.configurationFile</name>
                       <value>src/test/resources/logback.xml</value>
