--- a/fcrepo-integrationtest/pom.xml
+++ b/fcrepo-integrationtest/pom.xml
@@ -285,6 +285,7 @@
                     <include>**/TestAPIALiteConfigA.class</include>
                     <include>**/TestAPIM.class</include>
                     <include>**/TestAPIMLite.class</include>
+                    <include>**/TestRESTAPI.class</include>
                     <include>**/TestHTTPStatusCodes.class</include>
                     <include>**/TestHTTPStatusCodesConfigA.class</include>
                     <include>**/TestManagedDatastreams.class</include>
