--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,11 @@
         <version>1.0.3.1</version>
       </dependency>
       <dependency>
+        <groupId>com.sun.jersey.contribs</groupId>
+        <artifactId>jersey-multipart</artifactId>
+        <version>1.0.3.1</version>
+      </dependency>
+      <dependency>
         <groupId>commons-httpclient</groupId>
         <artifactId>commons-httpclient</artifactId>
         <version>3.1</version>
