Setting FeSL properties to match installation defaults (AuthN true, AuthZ false) - see FCREPO-735.  Expect some test failures.

--- a/resources/scripts/test/ConfigC.properties
+++ b/resources/scripts/test/ConfigC.properties
@@ -19,7 +19,8 @@ rest.enabled=true
 ri.enabled=true
 messaging.enabled=false
 messaging.uri=vm\:(broker\:(tcp\://localhost\:61616))
-fesl.enabled=true
+fesl.authn.enabled=true
+fesl.authz.enabled=false
 
 # Settings common to all test configs with this appserver+db combo
 servlet.engine=included
