--- a/resources/scripts/test/ConfigA.properties
+++ b/resources/scripts/test/ConfigA.properties
@@ -17,7 +17,8 @@ apim.ssl.required=true
 xacml.enabled=true
 ri.enabled=false
 messaging.enabled=false
-fesl.enabled=false
+fesl.authn.enabled=true
+fesl.authz.enabled=false
 
 # Settings common to all test configs with this appserver+db combo
 servlet.engine=included
