--- a/resources/scripts/test/ConfigB.properties
+++ b/resources/scripts/test/ConfigB.properties
@@ -18,7 +18,8 @@ xacml.enabled=true
 ri.enabled=true
 messaging.enabled=true
 messaging.uri=vm\:(broker\:(tcp\://localhost\:61616))
-fesl.enabled=false
+fesl.authn.enabled=true
+fesl.authz.enabled=false
 
 # Settings common to all test configs with this appserver+db combo
 servlet.engine=included
