--- a/resources/scripts/test/ConfigC.properties
+++ b/resources/scripts/test/ConfigC.properties
@@ -19,7 +19,7 @@ rest.enabled=true
 ri.enabled=true
 messaging.enabled=false
 messaging.uri=vm\:(broker\:(tcp\://localhost\:61616))
-fesl.authn.enabled=true
+fesl.authn.enabled=false
 fesl.authz.enabled=false
 
 # Settings common to all test configs with this appserver+db combo
