--- a/resources/scripts/test/ConfigLargeDS.properties
+++ b/resources/scripts/test/ConfigLargeDS.properties
@@ -16,7 +16,7 @@ apim.ssl.required=false
 xacml.enabled=false
 ri.enabled=false
 messaging.enabled=false
-fesl.authn.enabled=true
+fesl.authn.enabled=false
 fesl.authz.enabled=false
 
 # Settings common to all test configs with this appserver+db combo
