--- a/pom.xml
+++ b/pom.xml
@@ -372,7 +372,7 @@
     <repository>
       <id>duraspace-releases</id>
       <name>DuraSpace Releases Maven Repository</name>
-      <url>https://fedora-commons.org/m2/content/repositories/releases</url>
+      <url>https://m2.duraspace.org/content/repositories/releases</url>
       <releases>
         <enabled>true</enabled>
       </releases>
@@ -384,7 +384,7 @@
     <repository>
       <id>duraspace-thirdparty</id>
       <name>Duraspace Thirdparty Maven Repository</name>
-      <url>https://fedora-commons.org/m2/content/repositories/thirdparty</url>
+      <url>https://m2.duraspace.org/content/repositories/thirdparty</url>
       <releases>
         <enabled>true</enabled>
       </releases>
@@ -396,7 +396,7 @@
     <repository>
       <id>duraspace-snapshots</id>
       <name>DuraSpace Snapshots Maven Repository</name>
-      <url>https://fedora-commons.org/m2/content/repositories/snapshots</url>
+      <url>https://m2.duraspace.org/content/repositories/snapshots</url>
       <releases>
         <enabled>false</enabled>
       </releases>
