Changed CI tests appropriate for new elastic bamboo environment

--- a/resources/scripts/test/ConfigLargeDS.properties
+++ b/resources/scripts/test/ConfigLargeDS.properties
@@ -1,7 +1,7 @@
 # Install Properties for Large Datastream tests with bundled Tomcat and Derby
 
 # Change these as appropriate for your test environment
-fedora.serverHost=fedcommdevsrv1.nsdlib.org
+fedora.serverHost=localhost
 database.jdbcURL=jdbc\:derby\:/home/bamboo/fedora-home/derby/fedora3;create\=true
 tomcat.home=/home/bamboo/fedora-home/tomcat
 fedora.home=/home/bamboo/fedora-home
