FCREPO-736: System test failures with FeSL AuthN FCREPO-735: Test config files are out of date (updated to include fesl.authn.enabled=true) FCREPO-671: Allow use of FeSL AuthN without FeSL AuthZ during install (modified default for fesl.authn.enabled back to true)

--- a/resources/server/org/fcrepo/utilities/install/OptionDefinition.properties
+++ b/resources/server/org/fcrepo/utilities/install/OptionDefinition.properties
@@ -267,7 +267,7 @@ Enable FeSL Authentication? To continue to use Fedora's legacy             \n\
 authentication, enter "false" below. Please note that Fedora's legacy      \n\
 authentication is expected to be phased out in a subsequent release.       \n\
 For more information, see: http://fedora-commons.org/confluence/x/h4Ov
-fesl.authn.enabled.defaultValue = false
+fesl.authn.enabled.defaultValue = true
 
 fesl.authz.enabled.label = Enable FeSL AuthZ (Experimental Feature)
 fesl.authz.enabled.description = \
