--- a/fcrepo-client/fcrepo-client-messaging/pom.xml
+++ b/fcrepo-client/fcrepo-client-messaging/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.fcrepo</groupId>
     <artifactId>fcrepo-client</artifactId>
-    <version>3.4-RC1</version>
+    <version>3.4-SNAPSHOT</version>
   </parent>
 
   <artifactId>fcrepo-client-messaging</artifactId>
