--- a/fcrepo-integrationtest/pom.xml
+++ b/fcrepo-integrationtest/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.fcrepo</groupId>
     <artifactId>fcrepo</artifactId>
-    <version>3.4-RC1</version>
+    <version>3.4-SNAPSHOT</version>
   </parent>
 
   <artifactId>fcrepo-integrationtest</artifactId>
