--- a/fcrepo-webapp/fcrepo-webapp-saxon/pom.xml
+++ b/fcrepo-webapp/fcrepo-webapp-saxon/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.fcrepo</groupId>
     <artifactId>fcrepo-webapp</artifactId>
-    <version>3.4-RC1</version>
+    <version>3.4-SNAPSHOT</version>
   </parent>
 
   <artifactId>fcrepo-webapp-saxon</artifactId>
