Makes akubra-fs the default low level storage option and allows the choice of legacy-fs at install-time for people upgrading from 3.3 and below. See FCREPO-551

--- a/resources/server/org/fcrepo/utilities/install/OptionDefinition.properties
+++ b/resources/server/org/fcrepo/utilities/install/OptionDefinition.properties
@@ -16,7 +16,7 @@ Enter the full path where you want to install these files.
 
 fedora.admin.pass.label = Fedora administrator password
 fedora.admin.pass.description = \
-Enter the password to use for the Fedora administrator (fedoraAdmin) account.  
+Enter the password to use for the Fedora administrator (fedoraAdmin) account.
 
 fedora.serverHost.label = Fedora server host
 fedora.serverHost.description = \
@@ -76,7 +76,7 @@ servlet.engine.validValues = included existingTomcat other
 tomcat.home.label = Tomcat home directory
 tomcat.home.description = \
 Please provide the full path to your existing Tomcat installation, or  \n\
-the path where you plan to install the bundled Tomcat.    
+the path where you plan to install the bundled Tomcat.
 
 tomcat.shutdown.port.label = Tomcat shutdown port
 tomcat.shutdown.port.description = \
@@ -283,6 +283,17 @@ fesl.dbxml.home.description \
 FeSL uses Oracle Berkeley DB XML for its policy store. Enter the path to   \n\
 your DB XML installation (e.g. /usr/local/dbxml-2.5.13).
 
+llstore.type.label = Low Level Storage
+llstore.type.description = \
+Which low-level (file) storage plugin do you want to use?                  \n\
+We recommend akubra-fs for new installs.  If you are upgrading Fedora from \n\
+version 3.3 or below, you should use legacy-fs for compatibility with your \n\
+existing storage.  Other plugins are also available, but they must be      \n\
+configured after installation.  For more information, please see           \n\
+https://wiki.duraspace.org/x/Voqv
+llstore.type.validValues = akubra-fs legacy-fs
+llstore.type.defaultValue = akubra-fs
+
 deploy.local.services.label = Deploy local services and demos
 deploy.local.services.description = \
 Several sample back-end services are included with this distribution.      \n\
@@ -294,7 +305,7 @@ deploy.local.services.validValues = true false
 deploy.local.services.defaultValue = true
 
 # The 'unattended' property is not prompted for by the interactive installer.
-# Rather, it is a property that can be set in a Properties file that is used 
+# Rather, it is a property that can be set in a Properties file that is used
 # in conjunction with the installer to perform an unattended install
 unattended.label = Unattended installation
 unattended.description = An unattended installation allows for automated   \n\
