--- a/fcrepo-integrationtest/pom.xml
+++ b/fcrepo-integrationtest/pom.xml
@@ -297,6 +297,8 @@
                     <include>**/TestCommandLineUtilities.class</include>
                     <include>**/SharedDeploymentTests.class</include>
                     <include>**/ContentModelDSInputTest.class</include>
+                    <include>**/TestAdminAPI.class</include>
+                    
 
                   </includes>
                   <excludes>
@@ -427,6 +429,8 @@
                     <include>**/ContentModelDSInputTest.class</include>
                     <include>**/TestCommandLineUtilities.class</include>
                     <include>**/TestMisplacedNamespace.class</include>
+                    <include>**/TestAdminAPI.class</include>
+                    
 
                   </includes>
                   <excludes>
@@ -555,6 +559,7 @@
                     <include>**/TestServerConfiguration.class</include>
                     <include>**/ConflictingDeploymentTests.class</include>
                     <include>**/SharedDeploymentTests.class</include>
+                    <include>**/TestAdminAPI.class</include>
                     <!--
                     <include>**/TestXACMLPolicies.class</include>
                     -->
