Add system tests for FCREPO-798

--- a/fcrepo-integrationtest/pom.xml
+++ b/fcrepo-integrationtest/pom.xml
@@ -298,6 +298,7 @@
                     <include>**/SharedDeploymentTests.class</include>
                     <include>**/ContentModelDSInputTest.class</include>
                     <include>**/TestAdminAPI.class</include>
+                    <include>**/TestAPIM2.class</include>
                     
 
                   </includes>
