Revert changes made since 3.3 release (changes were for 3.3.1 which was not released as 3.4 superceded)

--- a/fcrepo-client/fcrepo-client-webadmin/pom.xml
+++ b/fcrepo-client/fcrepo-client-webadmin/pom.xml
@@ -5,7 +5,7 @@
   <groupId>org.fcrepo</groupId>
   <artifactId>fcrepo-client-webadmin</artifactId>
   <packaging>swf</packaging>
-  <version>3.3.1-SNAPSHOT</version>
+  <version>3.3</version>
   <name>Fedora Web Admin Client (Flash)</name>
 
   <!--
