--- a/fcrepo-webapp/fcrepo-webapp-fedora/src/main/webapp/WEB-INF/web.xml
+++ b/fcrepo-webapp/fcrepo-webapp-fedora/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app id="fcrepo" version="2.4"
+<web-app id="WebApp_ID" version="2.4"
   xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
@@ -279,10 +279,9 @@
       <param-value>org.fcrepo.server.jaas.auth.UserPrincipal</param-value>
     </init-param>
     <init-param>
-      <description>True iff API-A requests via the REST API require authentication. 
-      If not specified, defaults to true.</description>
-      <param-name>authnAPIA</param-name>
-      <param-value>false</param-value>
+      <description>OPTIONAL. A comma separated list of url-patterns to ignore</description>
+      <param-name>excludeUris</param-name>
+      <param-value>/getDS</param-value>
     </init-param>
   </filter>
 
