--- a/resources/server/fedora/utilities/install/OptionDefinition.properties
+++ b/resources/server/fedora/utilities/install/OptionDefinition.properties
@@ -268,23 +268,14 @@ using ActiveMQ broker URIs, see                                            \n\
 	http://activemq.apache.org/broker-uri.html
 messaging.uri.defaultValue = vm:(broker:(tcp://localhost:61616))
 
-fesl.authn.enabled.label = Enable FeSL AuthN (Experimental Feature)
-fesl.authn.enabled.description = \
-Enable FeSL Authentication? This is an experimental replacement for Fedora's \n\
-legacy authentication servlet filters, and is still under development.       \n\
-Production repositories should NOT enable this, but we invite you to try it  \n\
-out and give us feedback.                                                    \n\
+fesl.enabled.label = Enable FeSL (Experimental Feature)
+fesl.enabled.description = \
+Enable FeSL? The Fedora Security Layer is a replacement for Fedora's       \n\
+legacy authentication and authorization modules.                           \n\
+This feature is considered experimental and still under development.       \n\
+Production repositories should NOT enable this.                            \n\
 For more information, see: http://fedora-commons.org/confluence/x/h4Ov
-fesl.authn.enabled.defaultValue = false
-
-fesl.authz.enabled.label = Enable FeSL AuthZ (Experimental Feature)
-fesl.authz.enabled.description = \
-Enable FeSL Authorization? This is an experimental replacement for Fedora's \n\
-legacy authorization module, and is still under development.                \n\
-Production repositories should NOT enable this, but we invite you to try it \n\
-out and give us feedback.                                                   \n\
-For more information, see: http://fedora-commons.org/confluence/x/h4Ov
-fesl.authz.enabled.defaultValue = false
+fesl.enabled.defaultValue = false
 
 fesl.dbxml.home.label = Oracle Berkeley DB XML location
 fesl.dbxml.home.description \
