--- a/fcrepo-common/pom.xml
+++ b/fcrepo-common/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.fcrepo</groupId>
     <artifactId>fcrepo</artifactId>
-    <version>3.3.1-SNAPSHOT</version>
+    <version>3.3</version>
   </parent>
 
   <artifactId>fcrepo-common</artifactId>
