--- a/fcrepo-server/pom.xml
+++ b/fcrepo-server/pom.xml
@@ -129,7 +129,7 @@
                 <version>2.4.2</version>
 
                 <configuration>
-                                        <!--<forkMode>never</forkMode>-->
+                    <!--<forkMode>never</forkMode>-->
 
 
                     <systemProperties>
@@ -718,6 +718,13 @@
             <groupId>org.fcrepo</groupId>
             <artifactId>trippi-mulgara</artifactId>
             <version>1.4.3</version>
+        </dependency>
+
+        <!--Fix of the FCREPO-819 Bug-->
+        <dependency>
+            <groupId>jotm</groupId>
+            <artifactId>jotm_iiop_stubs</artifactId>
+            <version>2.0.10</version>
         </dependency>
 
         <dependency>
