--- a/fcrepo-server/pom.xml
+++ b/fcrepo-server/pom.xml
@@ -756,6 +756,13 @@
             <version>1.5.0</version>
         </dependency>
 
+         <!--Fix of the FCREPO-819 Bug-->
+        <dependency>
+            <groupId>jotm</groupId>
+            <artifactId>jotm_iiop_stubs</artifactId>
+            <version>2.0.10</version>
+        </dependency>
+
         <dependency>
             <groupId>org.fcrepo</groupId>
             <artifactId>fcrepo-common</artifactId>
